Fixed the video canvases z-index, now on top of cesium

--- a/public/cesium-webrtc/CesiumWidget.css
+++ b/public/cesium-webrtc/CesiumWidget.css
@@ -1,3 +1,9 @@
+.cesuim-container {
+	position: absolute;	
+	width: 100%;
+	height: 100%;
+}
+
 .cesium-widget,.cesium-widget canvas {
 	width: 100%;
 	height: 100%;
